fix: Integrate CORS with Spring Security filter chain to handle preflight